--- a/client/src/assets/styles/scss/_header.scss
+++ b/client/src/assets/styles/scss/_header.scss
@@ -182,7 +182,6 @@
     &__icon {
       font-size: 2.5rem;
       margin-right: 1rem;
-      cursor: pointer;
     }
     @include tablet {
       margin-right: 0;
